Updated the naming scheme to conform to vanilla.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,2 +1,2 @@
-item.woodCrook.name=Wooden Crook
-item.boneCrook.name=Bone Crook
+item.wood_crook.name=Wooden Crook
+item.bone_crook.name=Bone Crook
