Added names and creative menu entries for the barrels that are done.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,2 +1,4 @@
 item.wood_crook.name=Wooden Crook
 item.bone_crook.name=Bone Crook
+tile.oak_barrel.name=Oak Barrel
+tile.spruce_barrel.name=Spruce Barrel
