--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -2,3 +2,4 @@ item.wood_crook.name=Wooden Crook
 item.bone_crook.name=Bone Crook
 tile.oak_barrel.name=Oak Barrel
 tile.spruce_barrel.name=Spruce Barrel
+tile.dark_oak_barrel.name=Dark Oak Barrel
