Stained glass barrels!

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -4,3 +4,19 @@ tile.oak_barrel.name=Oak Barrel
 tile.spruce_barrel.name=Spruce Barrel
 tile.dark_oak_barrel.name=Dark Oak Barrel
 tile.glass_barrel.name=Glass Barrel
+tile.stained_glass_barrel_white.name=White Glass Barrel
+tile.stained_glass_barrel_orange.name=Orange Glass Barrel
+tile.stained_glass_barrel_magenta.name=Magenta Glass Barrel
+tile.stained_glass_barrel_lightblue.name=Light Blue Glass Barrel
+tile.stained_glass_barrel_yellow.name=Yellow Glass Barrel
+tile.stained_glass_barrel_lime.name=Lime Glass Barrel
+tile.stained_glass_barrel_pink.name=Pink Glass Barrel
+tile.stained_glass_barrel_gray.name=Gray Glass Barrel
+tile.stained_glass_barrel_lightgray.name=Light Gray Glass Barrel
+tile.stained_glass_barrel_cyan.name=Cyan Glass Barrel
+tile.stained_glass_barrel_purple.name=Purple Glass Barrel
+tile.stained_glass_barrel_blue.name=Blue Glass Barrel
+tile.stained_glass_barrel_brown.name=Brown Glass Barrel
+tile.stained_glass_barrel_green.name=Green Glass Barrel
+tile.stained_glass_barrel_red.name=Red Glass Barrel
+tile.stained_glass_barrel_black.name=Black Glass Barrel
