Added barrels for the rest of the vanilla wood variants and squished them into one block ID. Also, fixed some naming weirdness with the glass barrels.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,8 +1,5 @@
 item.crook_wood.name=Wooden Crook
 item.crook_bone.name=Bone Crook
-tile.barrel_oak.name=Oak Barrel
-tile.barrel_spruce.name=Spruce Barrel
-tile.barrel_dark_oak.name=Dark Oak Barrel
 tile.barrel_glass.name=Glass Barrel
 tile.barrel_glass_colored_white.name=White Glass Barrel
 tile.barrel_glass_colored_orange.name=Orange Glass Barrel
@@ -12,7 +9,7 @@ tile.barrel_glass_colored_yellow.name=Yellow Glass Barrel
 tile.barrel_glass_colored_lime.name=Lime Glass Barrel
 tile.barrel_glass_colored_pink.name=Pink Glass Barrel
 tile.barrel_glass_colored_gray.name=Gray Glass Barrel
-tile.barrel_glass_colored_lightgray.name=Light Gray Glass Barrel
+tile.barrel_glass_colored_silver.name=Light Gray Glass Barrel
 tile.barrel_glass_colored_cyan.name=Cyan Glass Barrel
 tile.barrel_glass_colored_purple.name=Purple Glass Barrel
 tile.barrel_glass_colored_blue.name=Blue Glass Barrel
@@ -20,3 +17,9 @@ tile.barrel_glass_colored_brown.name=Brown Glass Barrel
 tile.barrel_glass_colored_green.name=Green Glass Barrel
 tile.barrel_glass_colored_red.name=Red Glass Barrel
 tile.barrel_glass_colored_black.name=Black Glass Barrel
+tile.barrel_wood_oak.name=Oak Barrel
+tile.barrel_wood_spruce.name=Spruce Barrel
+tile.barrel_wood_birch.name=Birch Barrel
+tile.barrel_wood_jungle.name=Jungle Barrel
+tile.barrel_wood_acacia.name=Acacia Barrel
+tile.barrel_wood_dark_oak.name=Dark Oak Barrel
