Added stone barrels and coresponding recipe. Fixed barrels sometimes breaking when the wrong tool is used to pick them up.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -17,6 +17,7 @@ tile.barrel_glass_colored_brown.name=Brown Glass Barrel
 tile.barrel_glass_colored_green.name=Green Glass Barrel
 tile.barrel_glass_colored_red.name=Red Glass Barrel
 tile.barrel_glass_colored_black.name=Black Glass Barrel
+tile.barrel_stone.name=Stone Barrel
 tile.barrel_wood_oak.name=Oak Barrel
 tile.barrel_wood_spruce.name=Spruce Barrel
 tile.barrel_wood_birch.name=Birch Barrel
