--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -24,3 +24,4 @@ tile.barrel_wood_birch.name=Birch Barrel
 tile.barrel_wood_jungle.name=Jungle Barrel
 tile.barrel_wood_acacia.name=Acacia Barrel
 tile.barrel_wood_dark_oak.name=Dark Oak Barrel
+tile.dust.name=Dust
