--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -30,3 +30,9 @@ tile.barrel_wood_jungle.name=Jungle Barrel
 tile.barrel_wood_acacia.name=Acacia Barrel
 tile.barrel_wood_dark_oak.name=Dark Oak Barrel
 tile.dust.name=Dust
+tile.sieve_wood_oak.name=Oak Sieve
+tile.sieve_wood_spruce.name=Spruce Sieve
+tile.sieve_wood_birch.name=Birch Sieve
+tile.sieve_wood_jungle.name=Jungle Sieve
+tile.sieve_wood_acacia.name=Acacia Sieve
+tile.sieve_wood_dark_oak.name=Dark Oak Sieve
