Basics of the sieve mesh replacement system are working. Still lots of work to do.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -5,6 +5,8 @@ item.hammer_stone.name=Stone Hammer
 item.hammer_iron.name=Iron Hammer
 item.hammer_gold.name=Gold Hammer
 item.hammer_diamond.name=Diamond Hammer
+item.mesh_silk_white.name=Silk Mesh
+item.mesh_wood.name=Wooden Mesh
 tile.barrel_glass.name=Glass Barrel
 tile.barrel_glass_colored_white.name=White Glass Barrel
 tile.barrel_glass_colored_orange.name=Orange Glass Barrel
