Added stones (and their sifting and hammer recipe). Also added some options to the config to prevent any default hammer, sieve or compost recipes from being added in case someone wants to start from scratch.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -7,6 +7,7 @@ item.hammer_gold.name=Gold Hammer
 item.hammer_diamond.name=Diamond Hammer
 item.mesh_silk_white.name=Silk Mesh
 item.mesh_wood.name=Wooden Mesh
+item.stone.name=Small Stone
 tile.barrel_glass.name=Glass Barrel
 tile.barrel_glass_colored_white.name=White Glass Barrel
 tile.barrel_glass_colored_orange.name=Orange Glass Barrel
