Added ash and porcelain in preperation for diamonds, crucibles and metals.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,3 +1,4 @@
+item.ash.name=Ash
 item.crook_wood.name=Wooden Crook
 item.crook_bone.name=Bone Crook
 item.hammer_wood.name=Wooden Hammer
@@ -7,6 +8,7 @@ item.hammer_gold.name=Gold Hammer
 item.hammer_diamond.name=Diamond Hammer
 item.mesh_silk_white.name=Silk Mesh
 item.mesh_wood.name=Wooden Mesh
+item.porcelain.name=Porcelain Clay
 item.stone.name=Small Stone
 tile.barrel_glass.name=Glass Barrel
 tile.barrel_glass_colored_white.name=White Glass Barrel
