--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -35,6 +35,8 @@ tile.barrel_wood_jungle.name=Jungle Barrel
 tile.barrel_wood_acacia.name=Acacia Barrel
 tile.barrel_wood_dark_oak.name=Dark Oak Barrel
 tile.dust.name=Dust
+tile.furnace_dirt.name=Furnace
+tile.furnace_dirt_lit.name=Furnace
 tile.sieve_wood_oak.name=Oak Sieve
 tile.sieve_wood_spruce.name=Spruce Sieve
 tile.sieve_wood_birch.name=Birch Sieve
