Added black slimeballs, black emeralds, and the ability to create diamonds by blowing them up in a confined space.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,4 +1,6 @@
 item.ash.name=Ash
+item.emerald_black.name=Black Emerald
+item.slimeball_black.name=Black Slimeball
 item.crook_wood.name=Wooden Crook
 item.crook_bone.name=Bone Crook
 item.hammer_wood.name=Wooden Hammer
