Added the assets required for the crucible.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -36,6 +36,8 @@ tile.barrel_wood_birch.name=Birch Barrel
 tile.barrel_wood_jungle.name=Jungle Barrel
 tile.barrel_wood_acacia.name=Acacia Barrel
 tile.barrel_wood_dark_oak.name=Dark Oak Barrel
+tile.crucible.name=Crucible
+tile.crucible_raw.name=Unfired Crucible
 tile.dust.name=Dust
 tile.furnace_dirt.name=Furnace
 tile.furnace_dirt_lit.name=Furnace
