Added all the different ore salt crystals that I plan to support along with their models and textures.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -10,6 +10,14 @@ item.hammer_gold.name=Gold Hammer
 item.hammer_diamond.name=Diamond Hammer
 item.mesh_silk_white.name=Silk Mesh
 item.mesh_wood.name=Wooden Mesh
+item.ore_salts_iron.name=Iron Salts
+item.ore_salts_gold.name=Gold Salts
+item.ore_salts_copper.name=Copper Salts
+item.ore_salts_tin.name=Tin Salts
+item.ore_salts_lead.name=Lead Salts
+item.ore_salts_silver.name=Silver Salts
+item.ore_salts_nickel.name=Nickel Salts
+item.ore_salts_platinum.name=Platinum Salts
 item.porcelain.name=Porcelain Clay
 item.stone.name=Small Stone
 tile.barrel_glass.name=Glass Barrel
