Added Rust. Get it by sifting gravel and smelt it into iron.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -19,6 +19,7 @@ item.ore_salts_silver.name=Silver Salts
 item.ore_salts_nickel.name=Nickel Salts
 item.ore_salts_platinum.name=Platinum Salts
 item.porcelain.name=Porcelain Clay
+item.rust.name=Rust
 item.stone.name=Small Stone
 tile.barrel_glass.name=Glass Barrel
 tile.barrel_glass_colored_white.name=White Glass Barrel
