--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,4 +1,9 @@
 item.ash.name=Ash
+item.bucket_porcelain_raw=Unfired Bucket
+item.bucket_porcelain_empty=Empty Bucket
+item.bucket_porcelain_water=Water Bucket
+item.bucket_porcelain_lava=Lava Bucket
+item.bucket_porcelain_milk=Milk Bucket
 item.emerald_black.name=Black Emerald
 item.slimeball_black.name=Black Slimeball
 item.crook_wood.name=Wooden Crook
