Porcelain buckets appear to be fully functional.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,6 +1,6 @@
 item.ash.name=Ash
 item.bucket_porcelain_raw.name=Unfired Bucket
-item.bucket_porcelain_empty.name=Empty Bucket
+item.bucket_porcelain_empty.name=Bucket
 item.bucket_porcelain_water.name=Water Bucket
 item.bucket_porcelain_lava.name=Lava Bucket
 item.bucket_porcelain_milk.name=Milk Bucket
