CUSTOM FLUIDS ARE FINALLY FUCKING WORKING!?!?!

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -61,3 +61,4 @@ tile.sieve_wood_birch.name=Birch Sieve
 tile.sieve_wood_jungle.name=Jungle Sieve
 tile.sieve_wood_acacia.name=Acacia Sieve
 tile.sieve_wood_dark_oak.name=Dark Oak Sieve
+tile.witchwater.name=Witchwater
