Buckets are working for witchwater now.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -4,6 +4,8 @@ item.bucket_porcelain_empty.name=Bucket
 item.bucket_porcelain_water.name=Water Bucket
 item.bucket_porcelain_lava.name=Lava Bucket
 item.bucket_porcelain_milk.name=Milk Bucket
+item.bucket_porcelain_witchwater.name=Witchwater Bucket
+item.bucket_witchwater.name=Witchwater Bucket
 item.emerald_black.name=Black Emerald
 item.slimeball_black.name=Black Slimeball
 item.crook_wood.name=Wooden Crook
