You can put buckets of witchwater into barrels now.

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,3 +1,4 @@
+fluid.witchwater=Witchwater
 item.ash.name=Ash
 item.bucket_porcelain_raw.name=Unfired Bucket
 item.bucket_porcelain_empty.name=Bucket
