--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -29,6 +29,7 @@ item.ore_salts_nickel.name=Nickel Salts
 item.ore_salts_platinum.name=Platinum Salts
 item.porcelain.name=Porcelain Clay
 item.rust.name=Rust
+item.spores.name=Spores
 item.stone.name=Small Stone
 tile.barrel_glass.name=Glass Barrel
 tile.barrel_glass_colored_white.name=White Glass Barrel
