Making progress! Added metal salts!

--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -19,14 +19,15 @@ item.hammer_diamond.name=Diamond Hammer
 item.astrolabe_jade.name=Jade Astrolabe
 item.mesh_silk_white.name=Silk Mesh
 item.mesh_wood.name=Wooden Mesh
-item.ore_salts_iron.name=Iron Salts
-item.ore_salts_gold.name=Gold Salts
-item.ore_salts_copper.name=Copper Salts
-item.ore_salts_tin.name=Tin Salts
-item.ore_salts_lead.name=Lead Salts
-item.ore_salts_silver.name=Silver Salts
-item.ore_salts_nickel.name=Nickel Salts
-item.ore_salts_platinum.name=Platinum Salts
+item.metal_salts.name=Metal Salts
+item.ore_salts_iron.name=Crystalline Iron Salts
+item.ore_salts_gold.name=Crystalline Gold Salts
+item.ore_salts_copper.name=Crystalline Copper Salts
+item.ore_salts_tin.name=Crystalline Tin Salts
+item.ore_salts_lead.name=Crystalline Lead Salts
+item.ore_salts_silver.name=Crystalline Silver Salts
+item.ore_salts_nickel.name=Crystalline Nickel Salts
+item.ore_salts_platinum.name=Crystalline Platinum Salts
 item.porcelain.name=Porcelain Clay
 item.rust.name=Rust
 item.spores.name=Spores
