--- a/src/main/resources/assets/exnihilo2/lang/en_US.lang
+++ b/src/main/resources/assets/exnihilo2/lang/en_US.lang
@@ -1,5 +1,8 @@
+fluid.azoth=Azoth
 fluid.witchwater=Witchwater
 item.ash.name=Ash
+item.bucket_azoth.name=Azoth Bucket
+item.bucket_porcelain_azoth.name=Azoth Bucket
 item.bucket_porcelain_raw.name=Unfired Bucket
 item.bucket_porcelain_empty.name=Bucket
 item.bucket_porcelain_water.name=Water Bucket
@@ -66,4 +69,5 @@ tile.sieve_wood_birch.name=Birch Sieve
 tile.sieve_wood_jungle.name=Jungle Sieve
 tile.sieve_wood_acacia.name=Acacia Sieve
 tile.sieve_wood_dark_oak.name=Dark Oak Sieve
+tile.azoth.name=Azoth
 tile.witchwater.name=Witchwater
